@@ -42,18 +42,6 @@ endif (MINGW)
 ## Config
 
 if (NOT MINGW)
-  if (BUILD_WITH_RADIUS)
-    message (STATUS "Looking for freeradius-client library...")
-    find_library (LIBRADIUS freeradius-client)
-    if (NOT LIBRADIUS)
-      message (SEND_ERROR "  No freeradius-client library found")
-    else (NOT LIBRADIUS)
-      message (STATUS "  Found ${LIBRADIUS} - radius support enabled")
-      set (RADIUS_LDFLAGS "-lfreeradius-client")
-      add_definitions (-DENABLE_RADIUS_AUTH=1)
-    endif (NOT LIBRADIUS)
-  endif (BUILD_WITH_RADIUS)
-
   if (NOT BUILD_WITHOUT_LDAP)
     message (STATUS "Looking for libldap...")
 
@@ -90,14 +78,13 @@ if (MINGW)
   set (HEADERS openvas_proctitle.h openvas_ssh.h openvas_auth.h)
 else (MINGW)
   set (FILES arglists.c bpf_share.c ftp_funcs.c ids_send.c ldap_connect_auth.c
-             network.c openvas_ssh.c openvas_auth.c plugutils.c popen.c radius.c
+             network.c openvas_ssh.c openvas_auth.c plugutils.c popen.c
              openvas_proctitle.c prefs.c www_funcs.c pcap.c)
 
   set (HEADERS arglists.h bpf_share.h ftp_funcs.h ldap_connect_auth.h
                network.h pcap_openvas.h plugutils.h popen.h openvas_proctitle.h
                openvas_auth.h
-               openvas_ssh.h prefs.h nvt_categories.h internal_com.h www_funcs.h
-               radius.h)
+               openvas_ssh.h prefs.h nvt_categories.h internal_com.h www_funcs.h)
 endif (MINGW)
 
 if (BUILD_WITH_LDAP)
@@ -137,8 +124,7 @@ if (BUILD_SHARED)
   else (MINGW)
     target_link_libraries (openvas_misc_shared LINK_PRIVATE ${GNUTLS_LDFLAGS} openvas_base_shared ${UUID_LDFLAGS}
                            ${GLIB_LDFLAGS} ${PCAP_LDFLAGS} ${LIBSSH_LDFLAGS} ${LDAP_LDFLAGS}
-                           ${GCRYPT_LDFLAGS} ${RADIUS_LDFLAGS}
-                           ${LINKER_HARDENING_FLAGS})
+                           ${GCRYPT_LDFLAGS} ${LINKER_HARDENING_FLAGS})
   endif (MINGW)
 endif (BUILD_SHARED)
 
